--- a/login_info.yml
+++ b/login_info.yml
@@ -1,6 +1,6 @@
 ---
 username: admin
-password: Ry3h0m3bus
+password: password123
 instance: dev85752
 tower_username: "admin"
 tower_password: "ansible"
