--- a/demo_setup.yml
+++ b/demo_setup.yml
@@ -70,7 +70,7 @@
         tower_verify_ssl: false
 
     - name: add job template - compliance fix
-      tower_job_template:
+      awx.awx.tower_job_template:
         name: "SNOW-Demo-Compliance-Fix"
         job_type: run
         inventory: "Workshop Inventory"
@@ -79,6 +79,7 @@
         credentials: 
           - "Workshop Credential"
           - "SNOW Credential"
+        ask_variables_on_launch: yes
         state: "present"
         tower_username: "{{ tower_username }}"
         tower_password: "{{ tower_password }}"
