finish copy pasta cleanup

--- a/roles/snow-init/tasks/main.yml
+++ b/roles/snow-init/tasks/main.yml
@@ -15,8 +15,8 @@
 
 - name: Add custom credential
   awx.awx.tower_credential:
-    name: SNOW Credential 
-    credential_type: SNOW_CL Credential 
+    name: SNOW 
+    credential_type: ServiceNow 
     organization: Default 
     inputs:
       username: "{{ snow_username }}"
