--- a/roles/snow-init/tasks/main.yml
+++ b/roles/snow-init/tasks/main.yml
@@ -28,14 +28,24 @@
     tower_verify_ssl: true
 
 - name: Spin up a Windows server to compliance check 
-  vars:
-    group_name: "compliance"
-    short_desc: "borg"
-    server_env: "dev" 
-    server_os: "windows"
-    business_domain_name: "Red Hat"
-  include_role: 
-    name: aws-ec2-provision 
+  tower_job_launch:
+    job_template: 2. Provision
+    extra_vars:
+      group_name: "compliance"
+      short_desc: "borg"
+      server_env: "dev" 
+      server_os: "windows"
+      business_domain_name: "Red Hat"
+    tower_username: "{{ lookup('env', 'TOWER_USERNAME') }}"
+    tower_password: "{{ lookup('env', 'TOWER_PASSWORD') }}"
+    tower_host: "{{ lookup('env', 'TOWER_HOST') }}"
+    tower_verify_ssl: true
+  register: job 
+
+- name: Wait for job max 120s
+  tower_job_wait:
+    job_id: "{{ job.id }}"
+    timeout: 500
 
 - name: Add ServiceNow - Compliance Check template 
   awx.awx.tower_job_template:
@@ -47,7 +57,7 @@
     credentials: 
       - "AWS Windows"
       - "SNOW"
-    limit: compliance
+    limit: "compliance"
     state: "present"
     tower_username: "{{ lookup('env', 'TOWER_USERNAME') }}"
     tower_password: "{{ lookup('env', 'TOWER_PASSWORD') }}"
