old inventory name still in there

--- a/roles/snow-init/tasks/main.yml
+++ b/roles/snow-init/tasks/main.yml
@@ -51,7 +51,7 @@
   awx.awx.tower_job_template:
     name: "SNOW-Demo-Compliance-Check"
     job_type: run
-    inventory: "Workshop Inventory"
+    inventory: "AWS"
     project: "ServiceNow"
     playbook: check_compliance.yml
     credentials: 
