convert CISDSC to win_dsc

--- a/roles/snow-init/tasks/main.yml
+++ b/roles/snow-init/tasks/main.yml
@@ -56,8 +56,8 @@
     credentials: 
       - "AWS Windows"
       - "SNOW"
-    limit: "compliance"
-    state: "present"
+    limit: "tag_compliance"
+    state: present
     tower_username: "{{ lookup('env', 'TOWER_USERNAME') }}"
     tower_password: "{{ lookup('env', 'TOWER_PASSWORD') }}"
     tower_host: "{{ lookup('env', 'TOWER_HOST') }}"
