--- a/check_compliance.yml
+++ b/check_compliance.yml
@@ -11,11 +11,20 @@
         name: CISDSC
         state: present 
 
-    - name: Create a Server OU 
+    - name: Apply CIS DSC 
       win_dsc:
         resource_name: CIS_Microsoft_Windows_Server_2019_Member_Server_Release_1809
-        LevelOne: true
-        NextGenerationWindowsSecurity: true 
+        ExcludeList:
+          - 1.1.1 # Enforce password history
+          - 1.1.2 # Maximum password age
+          - 1.1.3 # Minimum password age
+          - 1.1.4 # Minimum password length
+          - 1.1.5 # Enforce complexity requirements
+          - 1.2.1 # Account lockout duration
+          - 1.2.2 # Account lockout threshold
+          - 1.2.3 # Reset account lockout counter
+          - 2.3.15 # Rename administrator account
+        2316AccountsRenameguestaccount: CISGuest
       register: compliance 
 
     - name: print compliance 
