--- a/check_compliance.yml
+++ b/check_compliance.yml
@@ -7,12 +7,12 @@
       win_shell: install-packageprovider -name nuget -force
 
     - name: Install CISDSC PS Module 
-      win_psmodule:
+      ansible.windows.win_psmodule:
         name: CISDSC
         state: present 
 
     - name: Setup DSC Local Configuration Manager
-      win_shell: |
+      ansible.windows.win_shell: |
         [DscLocalConfigurationManager()]
         Configuration LCMSettings {
             Node localhost
@@ -32,7 +32,7 @@
       become: true
 
     - name: Apply CIS DSC 
-      win_dsc:
+      ansible.windows.win_dsc:
         resource_name: CIS_Microsoft_Windows_Server_2019_Member_Server_Release_1809
         ExcludeList:
           - 1.1.1 # Enforce password history
